--- a/portfolio.html
+++ b/portfolio.html
@@ -18,37 +18,40 @@
   <body>
     <!-- HEADER -->
     <header class="header-section">
-      <nav>
-        <a class="header-logo link" href="./index.html"
-          >Web<span class="logo-studio">Studio</span>
-        </a>
-        <ul class="list">
-          <li>
-            <a class="link nav-link" href="./index.html">Studio</a>
-          </li>
-          <li>
-            <a class="link nav-link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li>
-            <a class="link nav-link" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-
-      <address class="contacts">
-        <ul class="list">
-          <li>
-            <a class="link contacts-item" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="link contacts-item" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container header-container">
+        <nav>
+          <a class="header-logo link" href="./index.html"
+            >Web<span class="logo-studio">Studio</span>
+          </a>
+          <ul class="list header-nav-list">
+            <li>
+              <a class="link header-nav-link" href="./index.html">Studio</a>
+            </li>
+            <li>
+              <a class="link header-nav-link" href="./portfolio.html"
+                >Portfolio</a
+              >
+            </li>
+            <li>
+              <a class="link header-nav-link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="contacts">
+          <ul class="list contacts-list">
+            <li>
+              <a class="link contacts-item" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="link contacts-item" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <!-- FILTERS -->
@@ -63,8 +66,8 @@
         </ul>
         <!-- PRODUCTS -->
 
-        <ul class="products-list list">
-          <li class="products-item">
+        <ul class="products-list list card-set">
+          <li class="products-item card-set-item">
             <a class="link" href="">
               <img
                 src="./images/img-app.jpg"
@@ -76,7 +79,7 @@
               <p class="products-descr">App</p>
             </a>
           </li>
-          <li class="products-item">
+          <li class="products-item card-set-item">
             <a class="link" href="">
               <img
                 src="./images/img-QR.jpg"
@@ -88,7 +91,7 @@
               <p class="products-descr">Marketing</p>
             </a>
           </li>
-          <li class="products-item">
+          <li class="products-item card-set-item">
             <a class="link" href="">
               <img
                 src="./images/img-laptop.jpg"
@@ -100,7 +103,7 @@
               <p class="products-descr">App</p>
             </a>
           </li>
-          <li class="products-item">
+          <li class="products-item card-set-item">
             <a class="link" href="">
               <img
                 src="./images/img-car.jpg"
@@ -112,7 +115,7 @@
               <p class="products-descr">Marketing</p>
             </a>
           </li>
-          <li class="products-item">
+          <li class="products-item card-set-item">
             <a class="link" href="">
               <img
                 src="./images/img-wallpapers.jpg"
@@ -124,7 +127,7 @@
               <p class="products-descr">Design</p>
             </a>
           </li>
-          <li class="products-item">
+          <li class="products-item card-set-item">
             <a class="link" href="">
               <img
                 src="./images/img-girl-headphones.jpg"
@@ -136,7 +139,7 @@
               <p class="products-descr">Marketing</p>
             </a>
           </li>
-          <li class="products-item">
+          <li class="products-item card-set-item">
             <a class="link" href="">
               <img
                 src="./images/img-instagram.jpg"
@@ -148,7 +151,7 @@
               <p class="products-descr">Design</p>
             </a>
           </li>
-          <li class="products-item">
+          <li class="products-item card-set-item">
             <a class="link" href="">
               <img
                 src="./images/img-groceries.jpg"
@@ -160,7 +163,7 @@
               <p class="products-descr">Web Site</p>
             </a>
           </li>
-          <li class="products-item">
+          <li class="products-item card-set-item">
             <a class="link" href="">
               <img
                 src="./images/img-coffee.jpg"
