--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- HEADER -->
     <header class="header-section">
       <div class="container header-container">
-        <nav>
+        <nav class="navigation">
           <a class="header-logo link" href="./index.html"
             >Web<span class="logo-studio">Studio</span>
           </a>
