--- a/index.html
+++ b/index.html
@@ -149,8 +149,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-name">Mark Guerrero</h3>
-              <p class="team-descr">Product Designer</p>
+              <div class="team-card-descr">
+                <h3 class="team-name">Mark Guerrero</h3>
+                <p class="team-descr">Product Designer</p>
+              </div>
             </li>
             <li class="team-list-item card-set-item">
               <img
@@ -159,8 +161,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-name">Tom Ford</h3>
-              <p class="team-descr">Frontend Developer</p>
+              <div class="team-card-descr">
+                <h3 class="team-name">Tom Ford</h3>
+                <p class="team-descr">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-list-item card-set-item">
               <img
@@ -169,8 +173,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-name">Camila Garcia</h3>
-              <p class="team-descr">Marketing</p>
+              <div class="team-card-descr">
+                <h3 class="team-name">Camila Garcia</h3>
+                <p class="team-descr">Marketing</p>
+              </div>
             </li>
             <li class="team-list-item card-set-item">
               <img
@@ -179,8 +185,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-name">Daniel Wilson</h3>
-              <p class="team-descr">UI Designer</p>
+              <div class="team-card-descr">
+                <h3 class="team-name">Daniel Wilson</h3>
+                <p class="team-descr">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
