--- a/portfolio.html
+++ b/portfolio.html
@@ -12,6 +12,14 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <!-- Style Normalization -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <!-- custom styles -->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
@@ -19,7 +27,7 @@
     <!-- HEADER -->
     <header class="header-section">
       <div class="container header-container">
-        <nav>
+        <nav class="navigation">
           <a class="header-logo link" href="./index.html"
             >Web<span class="logo-studio">Studio</span>
           </a>
@@ -54,139 +62,160 @@
       </div>
     </header>
     <main>
-      <!-- FILTERS -->
-      <section>
-        <h1 hidden>Portfolio</h1>
-        <ul class="filter-list list">
-          <li><button class="btn" type="button">All</button></li>
-          <li><button class="btn" type="button">Web Site</button></li>
-          <li><button class="btn" type="button">App</button></li>
-          <li><button class="btn" type="button">Design</button></li>
-          <li><button class="btn" type="button">Marketing</button></li>
-        </ul>
-        <!-- PRODUCTS -->
-
-        <ul class="products-list list card-set">
-          <li class="products-item card-set-item">
-            <a class="link" href="">
-              <img
-                src="./images/img-app.jpg"
-                alt="App interface"
-                width="360"
-                height="300"
-              />
-              <h2 class="products-name">Banking App Interface Concept</h2>
-              <p class="products-descr">App</p>
-            </a>
-          </li>
-          <li class="products-item card-set-item">
-            <a class="link" href="">
-              <img
-                src="./images/img-QR.jpg"
-                alt="Phone with QR code"
-                width="360"
-                height="300"
-              />
-              <h2 class="products-name">Cashless Payment</h2>
-              <p class="products-descr">Marketing</p>
-            </a>
-          </li>
-          <li class="products-item card-set-item">
-            <a class="link" href="">
-              <img
-                src="./images/img-laptop.jpg"
-                alt="Laptop&Smartphone"
-                width="360"
-                height="300"
-              />
-              <h2 class="products-name">Meditation App</h2>
-              <p class="products-descr">App</p>
-            </a>
-          </li>
-          <li class="products-item card-set-item">
-            <a class="link" href="">
-              <img
-                src="./images/img-car.jpg"
-                alt="Car interior"
-                width="360"
-                height="300"
-              />
-              <h2 class="products-name">Taxi Service</h2>
-              <p class="products-descr">Marketing</p>
-            </a>
-          </li>
-          <li class="products-item card-set-item">
-            <a class="link" href="">
-              <img
-                src="./images/img-wallpapers.jpg"
-                alt="Phone wallpapers"
-                width="360"
-                height="300"
-              />
-              <h2 class="products-name">Screen Illustrations</h2>
-              <p class="products-descr">Design</p>
-            </a>
-          </li>
-          <li class="products-item card-set-item">
-            <a class="link" href="">
-              <img
-                src="./images/img-girl-headphones.jpg"
-                alt="Girl with headphones"
-                width="360"
-                height="300"
-              />
-              <h2 class="products-name">Online Courses</h2>
-              <p class="products-descr">Marketing</p>
-            </a>
-          </li>
-          <li class="products-item card-set-item">
-            <a class="link" href="">
-              <img
-                src="./images/img-instagram.jpg"
-                alt="Instagram stories"
-                width="360"
-                height="300"
-              />
-              <h2 class="products-name">Instagram Stories Concept</h2>
-              <p class="products-descr">Design</p>
-            </a>
-          </li>
-          <li class="products-item card-set-item">
-            <a class="link" href="">
-              <img
-                src="./images/img-groceries.jpg"
-                alt="A woman with groceries"
-                width="360"
-                height="300"
-              />
-              <h2 class="products-name">Organic Food</h2>
-              <p class="products-descr">Web Site</p>
-            </a>
-          </li>
-          <li class="products-item card-set-item">
-            <a class="link" href="">
-              <img
-                src="./images/img-coffee.jpg"
-                alt="A man pouring coffee"
-                width="360"
-                height="300"
-              />
-              <h2 class="products-name">Fresh Coffee</h2>
-              <p class="products-descr">Web Site</p>
-            </a>
-          </li>
-        </ul>
+      <section class="portfolio">
+        <div class="container">
+          <!-- FILTERS -->
+          <h1 hidden>Portfolio</h1>
+          <ul class="filter-list list">
+            <li><button class="btn" type="button">All</button></li>
+            <li><button class="btn" type="button">Web Site</button></li>
+            <li><button class="btn" type="button">App</button></li>
+            <li><button class="btn" type="button">Design</button></li>
+            <li><button class="btn" type="button">Marketing</button></li>
+          </ul>
+          <!-- PRODUCTS -->
+          <ul class="products-list list card-set">
+            <li class="products-item card-set-item">
+              <a class="link" href="">
+                <img
+                  src="./images/img-app.jpg"
+                  alt="App interface"
+                  width="360"
+                  height="300"
+                />
+                <div class="products-item-descr">
+                  <h2 class="products-name">Banking App Interface Concept</h2>
+                  <p class="products-descr">App</p>
+                </div>
+              </a>
+            </li>
+            <li class="products-item card-set-item">
+              <a class="link" href="">
+                <img
+                  src="./images/img-QR.jpg"
+                  alt="Phone with QR code"
+                  width="360"
+                  height="300"
+                />
+                <div class="products-item-descr">
+                  <h2 class="products-name">Cashless Payment</h2>
+                  <p class="products-descr">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="products-item card-set-item">
+              <a class="link" href="">
+                <img
+                  src="./images/img-laptop.jpg"
+                  alt="Laptop&Smartphone"
+                  width="360"
+                  height="300"
+                />
+                <div class="products-item-descr">
+                  <h2 class="products-name">Meditation App</h2>
+                  <p class="products-descr">App</p>
+                </div>
+              </a>
+            </li>
+            <li class="products-item card-set-item">
+              <a class="link" href="">
+                <img
+                  src="./images/img-car.jpg"
+                  alt="Car interior"
+                  width="360"
+                  height="300"
+                />
+                <div class="products-item-descr">
+                  <h2 class="products-name">Taxi Service</h2>
+                  <p class="products-descr">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="products-item card-set-item">
+              <a class="link" href="">
+                <img
+                  src="./images/img-wallpapers.jpg"
+                  alt="Phone wallpapers"
+                  width="360"
+                  height="300"
+                />
+                <div class="products-item-descr">
+                  <h2 class="products-name">Screen Illustrations</h2>
+                  <p class="products-descr">Design</p>
+                </div>
+              </a>
+            </li>
+            <li class="products-item card-set-item">
+              <a class="link" href="">
+                <img
+                  src="./images/img-girl-headphones.jpg"
+                  alt="Girl with headphones"
+                  width="360"
+                  height="300"
+                />
+                <div class="products-item-descr">
+                  <h2 class="products-name">Online Courses</h2>
+                  <p class="products-descr">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="products-item card-set-item">
+              <a class="link" href="">
+                <img
+                  src="./images/img-instagram.jpg"
+                  alt="Instagram stories"
+                  width="360"
+                  height="300"
+                />
+                <div class="products-item-descr">
+                  <h2 class="products-name">Instagram Stories Concept</h2>
+                  <p class="products-descr">Design</p>
+                </div>
+              </a>
+            </li>
+            <li class="products-item card-set-item">
+              <a class="link" href="">
+                <img
+                  src="./images/img-groceries.jpg"
+                  alt="A woman with groceries"
+                  width="360"
+                  height="300"
+                />
+                <div class="products-item-descr">
+                  <h2 class="products-name">Organic Food</h2>
+                  <p class="products-descr">Web Site</p>
+                </div>
+              </a>
+            </li>
+            <li class="products-item card-set-item">
+              <a class="link" href="">
+                <img
+                  src="./images/img-coffee.jpg"
+                  alt="A man pouring coffee"
+                  width="360"
+                  height="300"
+                />
+                <div class="products-item-descr">
+                  <h2 class="products-name">Fresh Coffee</h2>
+                  <p class="products-descr">Web Site</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- FOOTER -->
     <footer class="footer">
-      <a class="footer-logo link" href="./index.html"
-        >Web<span class="footer-studio">Studio</span></a
-      >
-      <p class="footer-descr">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="footer-logo link" href="./index.html"
+          >Web<span class="footer-studio">Studio</span></a
+        >
+        <p class="footer-descr">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
