--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
     </header>
     <main>
       <!-- HERO -->
-      <section class="hero-section">
+      <section class="hero-section section">
         <div class="container">
           <h1 class="hero-slogan">Effective Solutions for Your Business</h1>
           <button class="srvc-btn" type="button">Order Service</button>
         </div>
       </section>
       <!-- VALUES -->
-      <section class="section">
+      <section class="section values-section">
         <div class="container">
           <h2 class="values-header">Values</h2>
           <!-- h2 is hidden -->
