--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </div>
       </section>
       <!-- SERVICES -->
-      <section class="section">
+      <section class="section service-section">
         <div class="container">
           <h2 class="section-title">What are we doing</h2>
           <ul class="service-list list card-set">
